murphi-opt/.antlr/ProtoCCParser.cpp

// Generated from /Users/petrvesely/dev/mlir/mlir-standalone-template/murphi-opt/ProtoCC.g4 by ANTLR 4.8



#include "ProtoCCParser.h"


using namespace antlrcpp;
using namespace antlr4;

ProtoCCParser::ProtoCCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ProtoCCParser::~ProtoCCParser() {
  delete _interpreter;
}

std::string ProtoCCParser::getGrammarFileName() const {
  return "ProtoCC.g4";
}

const std::vector<std::string>& ProtoCCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ProtoCCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Send_functionContext ------------------------------------------------------------------

ProtoCCParser::Send_functionContext::Send_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Send_functionContext::getRuleIndex() const {
  return ProtoCCParser::RuleSend_function;
}


ProtoCCParser::Send_functionContext* ProtoCCParser::send_function() {
  Send_functionContext *_localctx = _tracker.createInstance<Send_functionContext>(_ctx, getState());
  enterRule(_localctx, 0, ProtoCCParser::RuleSend_function);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    _la = _input->LA(1);
    if (!(_la == ProtoCCParser::T__0

    || _la == ProtoCCParser::T__1)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Mcast_functionContext ------------------------------------------------------------------

ProtoCCParser::Mcast_functionContext::Mcast_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Mcast_functionContext::getRuleIndex() const {
  return ProtoCCParser::RuleMcast_function;
}


ProtoCCParser::Mcast_functionContext* ProtoCCParser::mcast_function() {
  Mcast_functionContext *_localctx = _tracker.createInstance<Mcast_functionContext>(_ctx, getState());
  enterRule(_localctx, 2, ProtoCCParser::RuleMcast_function);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    _la = _input->LA(1);
    if (!(_la == ProtoCCParser::T__2

    || _la == ProtoCCParser::T__3)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bcast_functionContext ------------------------------------------------------------------

ProtoCCParser::Bcast_functionContext::Bcast_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Bcast_functionContext::getRuleIndex() const {
  return ProtoCCParser::RuleBcast_function;
}


ProtoCCParser::Bcast_functionContext* ProtoCCParser::bcast_function() {
  Bcast_functionContext *_localctx = _tracker.createInstance<Bcast_functionContext>(_ctx, getState());
  enterRule(_localctx, 4, ProtoCCParser::RuleBcast_function);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    _la = _input->LA(1);
    if (!(_la == ProtoCCParser::T__4

    || _la == ProtoCCParser::T__5)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Internal_event_functionContext ------------------------------------------------------------------

ProtoCCParser::Internal_event_functionContext::Internal_event_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Internal_event_functionContext::getRuleIndex() const {
  return ProtoCCParser::RuleInternal_event_function;
}


ProtoCCParser::Internal_event_functionContext* ProtoCCParser::internal_event_function() {
  Internal_event_functionContext *_localctx = _tracker.createInstance<Internal_event_functionContext>(_ctx, getState());
  enterRule(_localctx, 6, ProtoCCParser::RuleInternal_event_function);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(154);
    match(ProtoCCParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Set_function_typesContext ------------------------------------------------------------------

ProtoCCParser::Set_function_typesContext::Set_function_typesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Set_function_typesContext::getRuleIndex() const {
  return ProtoCCParser::RuleSet_function_types;
}


ProtoCCParser::Set_function_typesContext* ProtoCCParser::set_function_types() {
  Set_function_typesContext *_localctx = _tracker.createInstance<Set_function_typesContext>(_ctx, getState());
  enterRule(_localctx, 8, ProtoCCParser::RuleSet_function_types);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProtoCCParser::T__7)
      | (1ULL << ProtoCCParser::T__8)
      | (1ULL << ProtoCCParser::T__9)
      | (1ULL << ProtoCCParser::T__10)
      | (1ULL << ProtoCCParser::T__11))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Relational_operatorContext ------------------------------------------------------------------

ProtoCCParser::Relational_operatorContext::Relational_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Relational_operatorContext::getRuleIndex() const {
  return ProtoCCParser::RuleRelational_operator;
}


ProtoCCParser::Relational_operatorContext* ProtoCCParser::relational_operator() {
  Relational_operatorContext *_localctx = _tracker.createInstance<Relational_operatorContext>(_ctx, getState());
  enterRule(_localctx, 10, ProtoCCParser::RuleRelational_operator);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProtoCCParser::T__12)
      | (1ULL << ProtoCCParser::T__13)
      | (1ULL << ProtoCCParser::T__14)
      | (1ULL << ProtoCCParser::T__15)
      | (1ULL << ProtoCCParser::T__16)
      | (1ULL << ProtoCCParser::T__17))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Combinatorial_operatorContext ------------------------------------------------------------------

ProtoCCParser::Combinatorial_operatorContext::Combinatorial_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ProtoCCParser::Combinatorial_operatorContext::getRuleIndex() const {
  return ProtoCCParser::RuleCombinatorial_operator;
}


ProtoCCParser::Combinatorial_operatorContext* ProtoCCParser::combinatorial_operator() {
  Combinatorial_operatorContext *_localctx = _tracker.createInstance<Combinatorial_operatorContext>(_ctx, getState());
  enterRule(_localctx, 12, ProtoCCParser::RuleCombinatorial_operator);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    _la = _input->LA(1);
    if (!(_la == ProtoCCParser::T__18

    || _la == ProtoCCParser::T__19)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DocumentContext ------------------------------------------------------------------

ProtoCCParser::DocumentContext::DocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProtoCCParser::Const_declContext *> ProtoCCParser::DocumentContext::const_decl() {
  return getRuleContexts<ProtoCCParser::Const_declContext>();
}

ProtoCCParser::Const_declContext* ProtoCCParser::DocumentContext::const_decl(size_t i) {
  return getRuleContext<ProtoCCParser::Const_declContext>(i);
}

std::vector<ProtoCCParser::Init_hwContext *> ProtoCCParser::DocumentContext::init_hw() {
  return getRuleContexts<ProtoCCParser::Init_hwContext>();
}

ProtoCCParser::Init_hwContext* ProtoCCParser::DocumentContext::init_hw(size_t i) {
  return getRuleContext<ProtoCCParser::Init_hwContext>(i);
}

std::vector<ProtoCCParser::Arch_blockContext *> ProtoCCParser::DocumentContext::arch_block() {
  return getRuleContexts<ProtoCCParser::Arch_blockContext>();
}

ProtoCCParser::Arch_blockContext* ProtoCCParser::DocumentContext::arch_block(size_t i) {
  return getRuleContext<ProtoCCParser::Arch_blockContext>(i);
}

std::vector<ProtoCCParser::ExpressionsContext *> ProtoCCParser::DocumentContext::expressions() {
  return getRuleContexts<ProtoCCParser::ExpressionsContext>();
}

ProtoCCParser::ExpressionsContext* ProtoCCParser::DocumentContext::expressions(size_t i) {
  return getRuleContext<ProtoCCParser::ExpressionsContext>(i);
}


size_t ProtoCCParser::DocumentContext::getRuleIndex() const {
  return ProtoCCParser::RuleDocument;
}


ProtoCCParser::DocumentContext* ProtoCCParser::document() {
  DocumentContext *_localctx = _tracker.createInstance<DocumentContext>(_ctx, getState());
  enterRule(_localctx, 14, ProtoCCParser::RuleDocument);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 7) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 7)) & ((1ULL << (ProtoCCParser::T__6 - 7))
      | (1ULL << (ProtoCCParser::NETWORK - 7))
      | (1ULL << (ProtoCCParser::CACHE - 7))
      | (1ULL << (ProtoCCParser::DIR - 7))
      | (1ULL << (ProtoCCParser::MEM - 7))
      | (1ULL << (ProtoCCParser::MSG - 7))
      | (1ULL << (ProtoCCParser::STATE - 7))
      | (1ULL << (ProtoCCParser::ARCH - 7))
      | (1ULL << (ProtoCCParser::CONSTANT - 7))
      | (1ULL << (ProtoCCParser::IF - 7))
      | (1ULL << (ProtoCCParser::ID - 7)))) != 0)) {
      setState(166);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ProtoCCParser::CONSTANT: {
          setState(162);
          const_decl();
          break;
        }

        case ProtoCCParser::NETWORK:
        case ProtoCCParser::CACHE:
        case ProtoCCParser::DIR:
        case ProtoCCParser::MEM:
        case ProtoCCParser::MSG: {
          setState(163);
          init_hw();
          break;
        }

        case ProtoCCParser::ARCH: {
          setState(164);
          arch_block();
          break;
        }

        case ProtoCCParser::T__6:
        case ProtoCCParser::STATE:
        case ProtoCCParser::IF:
        case ProtoCCParser::ID: {
          setState(165);
          expressions();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(170);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

ProtoCCParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProtoCCParser::Int_declContext* ProtoCCParser::DeclarationsContext::int_decl() {
  return getRuleContext<ProtoCCParser::Int_declContext>(0);
}

ProtoCCParser::Bool_declContext* ProtoCCParser::DeclarationsContext::bool_decl() {
  return getRuleContext<ProtoCCParser::Bool_declContext>(0);
}

ProtoCCParser::State_declContext* ProtoCCParser::DeclarationsContext::state_decl() {
  return getRuleContext<ProtoCCParser::State_declContext>(0);
}

ProtoCCParser::Data_declContext* ProtoCCParser::DeclarationsContext::data_decl() {
  return getRuleContext<ProtoCCParser::Data_declContext>(0);
}

ProtoCCParser::Id_declContext* ProtoCCParser::DeclarationsContext::id_decl() {
  return getRuleContext<ProtoCCParser::Id_declContext>(0);
}


size_t ProtoCCParser::DeclarationsContext::getRuleIndex() const {
  return ProtoCCParser::RuleDeclarations;
}


ProtoCCParser::DeclarationsContext* ProtoCCParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 16, ProtoCCParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(176);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ProtoCCParser::INTID: {
        enterOuterAlt(_localctx, 1);
        setState(171);
        int_decl();
        break;
      }

      case ProtoCCParser::BOOLID: {
        enterOuterAlt(_localctx, 2);
        setState(172);
        bool_decl();
        break;
      }

      case ProtoCCParser::STATE: {
        enterOuterAlt(_localctx, 3);
        setState(173);
        state_decl();
        break;
      }

      case ProtoCCParser::DATA: {
        enterOuterAlt(_localctx, 4);
        setState(174);
        data_decl();
        break;
      }

      case ProtoCCParser::NID:
      case ProtoCCParser::SET: {
        enterOuterAlt(_localctx, 5);
        setState(175);
        id_decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_declContext ------------------------------------------------------------------

ProtoCCParser::Const_declContext::Const_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProtoCCParser::Const_declContext::CONSTANT() {
  return getToken(ProtoCCParser::CONSTANT, 0);
}

tree::TerminalNode* ProtoCCParser::Const_declContext::ID() {
  return getToken(ProtoCCParser::ID, 0);
}

tree::TerminalNode* ProtoCCParser::Const_declContext::INT() {
  return getToken(ProtoCCParser::INT, 0);
}


size_t ProtoCCParser::Const_declContext::getRuleIndex() const {
  return ProtoCCParser::RuleConst_decl;
}


ProtoCCParser::Const_declContext* ProtoCCParser::const_decl() {
  Const_declContext *_localctx = _tracker.createInstance<Const_declContext>(_ctx, getState());
  enterRule(_localctx, 18, ProtoCCParser::RuleConst_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(178);
    match(ProtoCCParser::CONSTANT);
    setState(179);
    match(ProtoCCParser::ID);
    setState(180);
    match(ProtoCCParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Int_declContext ------------------------------------------------------------------

ProtoCCParser::Int_declContext::Int_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProtoCCParser::Int_declContext::INTID() {
  return getToken(ProtoCCParser::INTID, 0);
}

ProtoCCParser::RangeContext* ProtoCCParser::Int_declContext::range() {
  return getRuleContext<ProtoCCParser::RangeContext>(0);
}

tree::TerminalNode* ProtoCCParser::Int_declContext::ID() {
  return getToken(ProtoCCParser::ID, 0);
}

tree::TerminalNode* ProtoCCParser::Int_declContext::SEMICOLON() {
  return getToken(ProtoCCParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> ProtoCCParser::Int_declContext::EQUALSIGN() {
  return getTokens(ProtoCCParser::EQUALSIGN);
}

tree::TerminalNode* ProtoCCParser::Int_declContext::EQUALSIGN(size_t i) {
  return getToken(ProtoCCParser::EQUALSIGN, i);
}

std::vector<tree::TerminalNode *> ProtoCCParser::Int_declContext::INT() {
  return getTokens(ProtoCCParser::INT);
}

tree::TerminalNode* ProtoCCParser::Int_declContext::INT(size_t i) {
  return getToken(ProtoCCParser::INT, i);
}


size_t ProtoCCParser::Int_declContext::getRuleIndex() const {
  return ProtoCCParser::RuleInt_decl;
}


ProtoCCParser::Int_declContext* ProtoCCParser::int_decl() {
  Int_declContext *_localctx = _tracker.createInstance<Int_declContext>(_ctx, getState());
  enterRule(_localctx, 20, ProtoCCParser::RuleInt_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    match(ProtoCCParser::INTID);
    setState(183);
    range();
    setState(184);
    match(ProtoCCParser::ID);
    setState(189);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProtoCCParser::EQUALSIGN) {
      setState(185);
      match(ProtoCCParser::EQUALSIGN);
      setState(186);
      match(ProtoCCParser::INT);
      setState(191);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(192);
    match(ProtoCCParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bool_declContext ------------------------------------------------------------------

ProtoCCParser::Bool_declContext::Bool_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProtoCCParser::Bool_declContext::BOOLID() {
  return getToken(ProtoCCParser::BOOLID, 0);
}

tree::TerminalNode* ProtoCCParser::Bool_declContext::ID() {
  return getToken(ProtoCCParser::ID, 0);
}

tree::TerminalNode* ProtoCCParser::Bool_declContext::SEMICOLON() {
  return getToken(ProtoCCParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> ProtoCCParser::Bool_declContext::EQUALSIGN() {
  return getTokens(ProtoCCParser::EQUALSIGN);
}

tree::TerminalNode* ProtoCCParser::Bool_declContext::EQUALSIGN(size_t i) {
  return getToken(ProtoCCParser::EQUALSIGN, i);
}

std::vector<tree::TerminalNode *> ProtoCCParser::Bool_declContext::BOOL() {
  return getTokens(ProtoCCParser::BOOL);
}

tree::TerminalNode* ProtoCCParser::Bool_declContext::BOOL(size_t i) {
  return getToken(ProtoCCParser::BOOL, i);
}


size_t ProtoCCParser::Bool_declContext::getRuleIndex() const {
  return ProtoCCParser::RuleBool_decl;
}


ProtoCCParser::Bool_declContext* ProtoCCParser::bool_decl() {
  Bool_declContext *_localctx = _tracker.createInstance<Bool_declContext>(_ctx, getState());
  enterRule(_localctx, 22, ProtoCCParser::RuleBool_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    match(ProtoCCParser::BOOLID);
    setState(195);
    match(ProtoCCParser::ID);
    setState(200);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProtoCCParser::EQUALSIGN) {
      setState(196);
      match(ProtoCCParser::EQUALSIGN);
      setState(197);
      match(ProtoCCParser::BOOL);
      setState(202);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(203);
    match(ProtoCCParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- State_declContext ------------------------------------------------------------------

ProtoCCParser::State_declContext::State_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProtoCCParser::State_declContext::STATE() {
  return getToken(ProtoCCParser::STATE, 0);
}

tree::TerminalNode* ProtoCCParser::State_declContext::ID() {
  return getToken(ProtoCCParser::ID, 0);
}

tree::TerminalNode* ProtoCCParser::State_declContext::SEMICOLON() {
  return getToken(ProtoCCParser::SEMICOLON, 0);
}


size_t ProtoCCParser::State_declContext::getRuleIndex() const {
  return ProtoCCParser::RuleState_decl;
}


ProtoCCParser::State_declContext* ProtoCCParser::state_decl() {
  State_declContext *_localctx = _tracker.createInstance<State_declContext>(_ctx, getState());
  enterRule(_localctx, 24, ProtoCCParser::RuleState_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    match(ProtoCCParser::STATE);
    setState(206);
    match(ProtoCCParser::ID);
    setState(207);
    match(ProtoCCParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_declContext ------------------------------------------------------------------

ProtoCCParser::Data_declContext::Data_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProtoCCParser::Data_declContext::DATA() {
  return getToken(ProtoCCParser::DATA, 0);
}

tree::TerminalNode* ProtoCCParser::Data_declContext::ID() {
  return getToken(ProtoCCParser::ID, 0);
}

tree::TerminalNode* ProtoCCParser::Data_declContext::SEMICOLON() {
  return getToken(ProtoCCParser::SEMICOLON, 0);
}


size_t ProtoCCParser::Data_declContext::getRuleIndex() const {
  return ProtoCCParser::RuleData_decl;
}


ProtoCCParser::Data_declContext* ProtoCCParser::data_decl() {
  Data_declContext *_localctx = _tracker.createInstance<Data_declContext>(_ctx, getState());
  enterRule(_localctx, 26, ProtoCCParser::RuleData_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(209);
    match(ProtoCCParser::DATA);
    setState(210);
    match(ProtoCCParser::ID);
    setState(211);
    match(ProtoCCParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Id_declContext ------------------------------------------------------------------

ProtoCCParser::Id_declContext::Id_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProtoCCParser::Id_declContext::NID() {
  return getToken(ProtoCCParser::NID, 0);
}

std::vector<tree::TerminalNode *> ProtoCCParser::Id_declContext::ID() {
  return getTokens(ProtoCCParser::ID);
}

tree::TerminalNode* ProtoCCParser::Id_declContext::ID(size_t i) {
  return getToken(ProtoCCParser::ID, i);
}

tree::TerminalNode* ProtoCCParser::Id_declContext::SEMICOLON() {
  return getToken(ProtoCCParser::SEMICOLON, 0);
}

std::vector<ProtoCCParser::Set_declContext *> ProtoCCParser::Id_declContext::set_decl() {
  return getRuleContexts<ProtoCCParser::Set_declContext>();
}

ProtoCCParser::Set_declContext* ProtoCCParser::Id_declContext::set_decl(size_t i) {
  return getRuleContext<ProtoCCParser::Set_declContext>(i);
}

std::vector<tree::TerminalNode *> ProtoCCParser::Id_declContext::EQUALSIGN() {
  return getTokens(ProtoCCParser::EQUALSIGN);
}

tree::TerminalNode* ProtoCCParser::Id_declContext::EQUALSIGN(size_t i) {
  return getToken(ProtoCCParser::EQUALSIGN, i);
}


size_t ProtoCCParser::Id_declContext::getRuleIndex() const {
  return ProtoCCParser::RuleId_decl;
}

